--- a/src/config.json
+++ b/src/config.json
@@ -1,10 +1,10 @@
 {
   "id": "68ffde6e04eb94aac242cdba",
-  "logo": "https://i.ibb.co/k2GBrQ97/Photography-Icons-in-Blue-removebg-preview.png",
+  "logo": "https://i.ibb.co/N62gnzvV/blob.png",
   "store_name": "next-commerce",
   "main_color": "#001637ff",
   "phone": "0540697507",
-  "repoName": "issak",
+  "repoName": "issak-nc",
   "facebook": "https://www.facebook.com/",
   "instagram": "https://www.instagram.com/",
   "tiktok": "https://www.tiktok.com/",
