--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
   "id": "68ffde6e04eb94aac242cdba",
   "logo": "https://i.ibb.co/N62gnzvV/blob.png",
   "store_name": "next-commerce",
-  "main_color": "#001637ff",
+  "main_color": "#0061fe",
   "phone": "0540697507",
   "repoName": "issak-nc",
   "facebook": "https://www.facebook.com/",
